Fixing the scrollbar issues

--- a/react/blog/src/App.css
+++ b/react/blog/src/App.css
@@ -2,6 +2,22 @@
   text-align: center;
 }
 
+/* Hide x scrollbar and stop functionality*/
+body {
+  overflow-x: hidden;
+}
+
+/* Hide scrollbar*/
+::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.example {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
